# devk

./: .gitignore  LINUX_SETUP.md
source/: .clang-format  BUILD.md  CMakeLists.txt  check_sizes.cpp  source.sln  symlinks.bat
source/include/AccountServer/: AccountServer.rc  AccountServer2.h  Auth.h  DataBaseCtrl.h  GlobalVariable.h  MyThread.h  Player.h  PlayerMgr.h  resource.h  stdafx.h
source/include/GameServer/: Action.h  AttachManage.h  Attachable.h  Auction.h  AuctionItem.h  Birthplace.h  CallStack.h  CharBoat.h  CharForge.h  CharStall.h  CharTrade.h  Character.h  Config.h  Entity.h  EntityAlloc.h  EntitySpawn.h  Event.h  EventEntity.h  EventHandler.h  Expand.h  EyeshotCell.h  FightAble.h  FindPath.h  GameApp.h  GameAppNet.h  GameDB.h  GameServer.h  GameServerApp.h  GateServer.h  Guild.h  HarmRec.h  Identity.h  Item.h  MapEntry.h  MapRes.h  MapTrigger.h  MgrUnit.h  MgrUnitEx.h  Mission.h  MoveAble.h  (+33 more)
source/include/GateServer/: GateServer.h
source/include/GroupServer/: DBConnect.h  DBPool.h  Friend.h  GateServer.h  GroupServerApp.h  Guild.h  GuildBankMsg.h  GuildMember.h  Invitation.h  LuaFunc.h  Master.h  Parser.h  Player.h  Script.h  SessionChat.h  Team.h  TeamMember.h  stdafx.h
source/include/audiosdl/: AudioResource.h  AudioSDL.h  SDL_Wrapper.h  datatype.h  lock.h
source/include/botan/: build.h
source/include/calua/: CaLua.h  CaLua_avltree.h  CaLua_guts.h  CaLua_hash.h  CaLua_helper.h  luna.h  resource.h
source/include/common/: AreaRecord.h  ChaAction.h  ChaAttr.h  ChaAttrType.h  ChaMask.h  CharacterRecord.h  CommFunc.h  CompCommand.h  EventRecord.h  ForgeRecord.h  GameCommon.h  HairRecord.h  ItemAttr.h  ItemAttrType.h  ItemContent.h  ItemRecord.h  JobInitEquip.h  JobType.h  Kitbag.h  KitbagEnCode.h  LevelRecord.h  LifeLvRecord.h  LogFile.h  MonRefRecord.h  MountRecord.h  NetCommand.h  NetRetCode.h  NpcRecord.h  PacketSanitizer.h  RoleCommon.h  SailLvRecord.h  ShipSet.h  SkillBag.h  SkillRecord.h  SkillStateRecord.h  SkillStateType.h  StringLib.h  SwitchMapRecord.h  TableData.h  TableObfuscation.h  (+5 more)
source/include/directx/: ADSIid.h  AF_Irda.h  AccCtrl.h  AclAPI.h  AclUI.h  ActivScp.h  ActiveDS.h  Admex.h  Adptif.h  AdsDb.h  AdsErr.h  AdsHlp.h  AdsProp.h  Adsnms.h  Adssts.h  AdtGen.h  AgtCtl.h  AgtErr.h  AgtSvr.h  AlphaOps.h  Amvideo.h  AppAvCap.h  AqAdmTyp.h  Asptlb.h  AtalkWsh.h  AuthZ.h  Authif.h  AviFmt.h  BHver.h  BLBErr.h  BaseTsd.h  BaseTyps.h  BatClass.h  Bdatif.h  BiDiSpl.h  Bits.h  BitsMsg.h  Buffer.h  CChannel.h  CDONTS.h  (+754 more)
source/include/discord/: discord_game_sdk.h  stdbool.h
source/include/enclib/: d3des.h  enclib.h
source/include/engine/: BitmapFont.h  Blk.h  EffectFile.h  GlobalInc.h  I_Effect.h  MPCamera.h  MPEffPrerequisites.h  MPEffectCtrl.h  MPFont.h  MPGameApp.h  MPMap.h  MPMath.h  MPModelEff.h  MPParticleCtrl.h  MPParticleSys.h  MPRender.h  MPResData.h  MPResManger.h  MPResourceSet.h  MPSceneItem.h  MPSceneObject.h  MPShadeMap.h  MPShadowMap.h  MPTerrainSet.h  MPTextureSet.h  MPTile.h  STLprerequisite.h  ShaderLoad.h  TgaCore.h  ZRBlock.h  d3dfont.h  d3dutil.h  lwAnimKeySetPRS.h  lwCoordinateSys.h  lwDDS.h  lwDeviceObject.h  lwDirectX.h  lwDirectoryBrowser.h  lwEfxTrack.h  lwExpObj.h  (+38 more)
source/include/game/: Actor.h  ArcTrack.h  AudioThread.h  AutoAttack.h  AutoPathService.h  BassLoader.h  BassMusicInterface.h  BitmapFontAdapter.h  BoolSet.h  CRCircle.h  CRCursor.h  CRCursorObj.h  CameraCtrl.h  ChaClientAttr.h  ChaCreateSet.h  ChaState.h  Character.h  CharacterAction.h  CharacterModel.h  CharacterPoseSet.h  ChatIconSet.h  ChatRecord.h  ClientSecurityEnhancements.md  Connection.h  CreateChaScene.h  DSoundInstance.h  DSoundManager.h  DrawPointList.h  EffDelay.h  EffectObj.h  EffectSet.h  ElfSkillSet.h  Event.h  EventSoundSet.h  FindPath.h  FrndInviteFormMgr.h  GameApp.h  GameAppMsg.h  GameConfig.h  GameLoading.h  (+190 more)
source/include/icuhelper/: ResourceBundleManage.h  pi_Alloc.h  pi_Memory.h
source/include/infonet/: InfoNet.h  lock.h  log.h  thread.h
source/include/ipss/: BTI.h  PAI.h
source/include/linux_compat/: atltime.h  crtdbg.h  direct.h  io.h  mbstring.h  process.h  tchar.h  windows.h  xstring
source/include/luajit/: buildvm.h  dasm_mips.h  dasm_ppc.h  lj_alloc.h  lj_arch.h  lj_asm_arm.h  lj_asm_mips.h  lj_asm_ppc.h  lj_asm_x86.h  lj_carith.h  lj_ccall.h  lj_ctype.h  lj_def.h  lj_emit_mips.h  lj_emit_x86.h  lj_err.h  lj_ff.h  lj_ffrecord.h  lj_gc.h  lj_gdbjit.h  lj_iropt.h  lj_jit.h  lj_mcode.h  lj_meta.h  lj_record.h  lj_snap.h  lj_strscan.h  lj_tab.h  lj_target.h  lj_target_mips.h  lj_target_ppc.h  lj_target_x86.h  lj_trace.h  lj_vm.h  lj_vmevent.h
source/include/maxsdk/: BIPEXP.H  GeoTableItem.h  ICompositeShader.h  ICoordSys.h  ILayerProperties.h  ILightingUnits.h  INodeBakeProperties.h  INodeExposure.h  INodeGIProperties.h  INodeLayerProperties.h  IParticleObjectExt.h  IRadiosityPreferences.h  IUtilityPanel.h  IViewportManager.h  MNNormalSpec.h  PHYEXP.H  acolor.h  actiontable.h  alerts.h  animtbl.h  appio.h  arcdlg.h  assert1.h  baseinterface.h  bezfont.h  bitarray.h  bitmap.h  bmmlib.h  box2.h  box3.h  buildnumber.h  buildver.h  captypes.h  channels.h  chkmtlapi.h  client.h  cmdmode.h  color.h  contextids.h  control.h  (+251 more)
source/include/sdl/: SDL.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_copying.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_getenv.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_loadso.h  SDL_main.h  SDL_mixer.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_quit.h  SDL_rwops.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  SDL_version.h  SDL_video.h  begin_code.h  close_code.h
source/include/serversdk/: AcceptConnect.h  BaseBuf.h  Comm.h  CommRPC.h  DBCCommon.h  DataSocket.h  EventMsgRC.h  IniFile.h  NTService.h  NTSvcObject.h  Packet.h  PacketEncryption.h  PacketQueue.h  Point.h  PreAlloc.h  RPCInfo.h  RWMutex.h  Receiver.h  RunBiDirectChain.h  RunCtrlThrd.h  Sender.h  TLSIndex.h  Thread.h  ThreadPool.h  Timer.h  dstring.h  excp.h  (+3 more)
source/scripts/: build-linux.sh  build-windows.bat  deploy-linux.sh  deploy-windows.bat  start-servers.sh  stop-servers.sh
(+6839 files in other folders)
